--- a/apmis-flow/package.json
+++ b/apmis-flow/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "no-name",
   "license": "UNLICENSED",
+  "name": "no-name",
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-iconset-svg": "3.0.1",
@@ -111,12 +111,15 @@
     "lit": "2.6.1"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "3.1.0",
     "@rollup/pluginutils": "4.1.0",
     "async": "3.2.2",
     "glob": "7.2.3",
     "mkdirp": "1.0.4",
     "rollup-plugin-brotli": "3.1.0",
+    "rollup-plugin-lit-css": "^2.1.0",
+    "rollup-plugin-styles": "^3.14.1",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "4.9.3",
@@ -125,115 +128,6 @@
     "workbox-build": "6.5.4",
     "workbox-core": "6.5.4",
     "workbox-precaching": "6.5.4"
-  },
-  "overrides": {
-    "@vaadin/bundles": "$@vaadin/bundles",
-    "@vaadin/accordion": "$@vaadin/accordion",
-    "@vaadin/app-layout": "$@vaadin/app-layout",
-    "@vaadin/avatar": "$@vaadin/avatar",
-    "@vaadin/avatar-group": "$@vaadin/avatar-group",
-    "@vaadin/button": "$@vaadin/button",
-    "@vaadin/checkbox": "$@vaadin/checkbox",
-    "@vaadin/checkbox-group": "$@vaadin/checkbox-group",
-    "@vaadin/combo-box": "$@vaadin/combo-box",
-    "@vaadin/component-base": "$@vaadin/component-base",
-    "@vaadin/context-menu": "$@vaadin/context-menu",
-    "@vaadin/custom-field": "$@vaadin/custom-field",
-    "@vaadin/date-picker": "$@vaadin/date-picker",
-    "@vaadin/date-time-picker": "$@vaadin/date-time-picker",
-    "@vaadin/details": "$@vaadin/details",
-    "@vaadin/dialog": "$@vaadin/dialog",
-    "@vaadin/email-field": "$@vaadin/email-field",
-    "@vaadin/field-base": "$@vaadin/field-base",
-    "@vaadin/field-highlighter": "$@vaadin/field-highlighter",
-    "@vaadin/form-layout": "$@vaadin/form-layout",
-    "@vaadin/grid": "$@vaadin/grid",
-    "@vaadin/horizontal-layout": "$@vaadin/horizontal-layout",
-    "@vaadin/icon": "$@vaadin/icon",
-    "@vaadin/icons": "$@vaadin/icons",
-    "@vaadin/input-container": "$@vaadin/input-container",
-    "@vaadin/integer-field": "$@vaadin/integer-field",
-    "@polymer/iron-icon": "$@polymer/iron-icon",
-    "@polymer/iron-iconset-svg": "$@polymer/iron-iconset-svg",
-    "@polymer/iron-list": "$@polymer/iron-list",
-    "@polymer/iron-meta": "$@polymer/iron-meta",
-    "@polymer/iron-resizable-behavior": "$@polymer/iron-resizable-behavior",
-    "@vaadin/item": "$@vaadin/item",
-    "@vaadin/list-box": "$@vaadin/list-box",
-    "@vaadin/lit-renderer": "$@vaadin/lit-renderer",
-    "@vaadin/login": "$@vaadin/login",
-    "@vaadin/menu-bar": "$@vaadin/menu-bar",
-    "@vaadin/message-input": "$@vaadin/message-input",
-    "@vaadin/message-list": "$@vaadin/message-list",
-    "@vaadin/notification": "$@vaadin/notification",
-    "@vaadin/number-field": "$@vaadin/number-field",
-    "@vaadin/password-field": "$@vaadin/password-field",
-    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
-    "@vaadin/progress-bar": "$@vaadin/progress-bar",
-    "@vaadin/radio-group": "$@vaadin/radio-group",
-    "@vaadin/scroller": "$@vaadin/scroller",
-    "@vaadin/select": "$@vaadin/select",
-    "@vaadin/split-layout": "$@vaadin/split-layout",
-    "@vaadin/tabs": "$@vaadin/tabs",
-    "@vaadin/text-area": "$@vaadin/text-area",
-    "@vaadin/text-field": "$@vaadin/text-field",
-    "@vaadin/time-picker": "$@vaadin/time-picker",
-    "@vaadin/upload": "$@vaadin/upload",
-    "@vaadin/vaadin-accordion": "$@vaadin/vaadin-accordion",
-    "@vaadin/vaadin-app-layout": "$@vaadin/vaadin-app-layout",
-    "@vaadin/vaadin-avatar": "$@vaadin/vaadin-avatar",
-    "@vaadin/vaadin-button": "$@vaadin/vaadin-button",
-    "@vaadin/vaadin-checkbox": "$@vaadin/vaadin-checkbox",
-    "@vaadin/vaadin-combo-box": "$@vaadin/vaadin-combo-box",
-    "@vaadin/vaadin-context-menu": "$@vaadin/vaadin-context-menu",
-    "@vaadin/vaadin-custom-field": "$@vaadin/vaadin-custom-field",
-    "@vaadin/vaadin-date-picker": "$@vaadin/vaadin-date-picker",
-    "@vaadin/vaadin-date-time-picker": "$@vaadin/vaadin-date-time-picker",
-    "@vaadin/vaadin-details": "$@vaadin/vaadin-details",
-    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
-    "@vaadin/vaadin-dialog": "$@vaadin/vaadin-dialog",
-    "@vaadin/vaadin-form-layout": "$@vaadin/vaadin-form-layout",
-    "@vaadin/vaadin-grid": "$@vaadin/vaadin-grid",
-    "@vaadin/vaadin-icon": "$@vaadin/vaadin-icon",
-    "@vaadin/vaadin-icons": "$@vaadin/vaadin-icons",
-    "@vaadin/vaadin-item": "$@vaadin/vaadin-item",
-    "@vaadin/vaadin-list-box": "$@vaadin/vaadin-list-box",
-    "@vaadin/vaadin-list-mixin": "$@vaadin/vaadin-list-mixin",
-    "@vaadin/vaadin-login": "$@vaadin/vaadin-login",
-    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
-    "@vaadin/vaadin-menu-bar": "$@vaadin/vaadin-menu-bar",
-    "@vaadin/vaadin-messages": "$@vaadin/vaadin-messages",
-    "@vaadin/vaadin-notification": "$@vaadin/vaadin-notification",
-    "@vaadin/vaadin-ordered-layout": "$@vaadin/vaadin-ordered-layout",
-    "@vaadin/vaadin-overlay": "$@vaadin/vaadin-overlay",
-    "@vaadin/vaadin-progress-bar": "$@vaadin/vaadin-progress-bar",
-    "@vaadin/vaadin-radio-button": "$@vaadin/vaadin-radio-button",
-    "@vaadin/router": "$@vaadin/router",
-    "@vaadin/vaadin-select": "$@vaadin/vaadin-select",
-    "@vaadin/vaadin-split-layout": "$@vaadin/vaadin-split-layout",
-    "@vaadin/vaadin-tabs": "$@vaadin/vaadin-tabs",
-    "@vaadin/vaadin-template-renderer": "$@vaadin/vaadin-template-renderer",
-    "@vaadin/vaadin-text-field": "$@vaadin/vaadin-text-field",
-    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
-    "@vaadin/vaadin-time-picker": "$@vaadin/vaadin-time-picker",
-    "@vaadin/vaadin-upload": "$@vaadin/vaadin-upload",
-    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
-    "@vaadin/vaadin-virtual-list": "$@vaadin/vaadin-virtual-list",
-    "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
-    "@vaadin/virtual-list": "$@vaadin/virtual-list",
-    "@vaadin/confirm-dialog": "$@vaadin/confirm-dialog",
-    "@vaadin/vaadin-confirm-dialog": "$@vaadin/vaadin-confirm-dialog",
-    "@vaadin/common-frontend": "$@vaadin/common-frontend",
-    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
-    "lit": "$lit",
-    "@polymer/polymer": "$@polymer/polymer",
-    "date-fns": "$date-fns",
-    "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
-    "@vaadin/tabsheet": "$@vaadin/tabsheet",
-    "@vaadin/tooltip": "$@vaadin/tooltip",
-    "@vaadin-component-factory/vcf-anchor-nav": "$@vaadin-component-factory/vcf-anchor-nav",
-    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav"
   },
   "vaadin": {
     "dependencies": {
@@ -359,6 +253,115 @@
       "workbox-core": "6.5.4",
       "workbox-precaching": "6.5.4"
     },
-    "hash": "e924f0412ae48378557e48f4af2b14d7c9c76bca8bb89ea11fdd8a47c3abf22e"
+    "hash": "207f924de298f5c8b87706abe05d1b1a03631b61fe6271a1f2cd9804eb09842c"
+  },
+  "overrides": {
+    "@vaadin/bundles": "$@vaadin/bundles",
+    "@vaadin/accordion": "$@vaadin/accordion",
+    "@vaadin/app-layout": "$@vaadin/app-layout",
+    "@vaadin/avatar": "$@vaadin/avatar",
+    "@vaadin/avatar-group": "$@vaadin/avatar-group",
+    "@vaadin/button": "$@vaadin/button",
+    "@vaadin/checkbox": "$@vaadin/checkbox",
+    "@vaadin/checkbox-group": "$@vaadin/checkbox-group",
+    "@vaadin/combo-box": "$@vaadin/combo-box",
+    "@vaadin/component-base": "$@vaadin/component-base",
+    "@vaadin/confirm-dialog": "$@vaadin/confirm-dialog",
+    "@vaadin/context-menu": "$@vaadin/context-menu",
+    "@vaadin/custom-field": "$@vaadin/custom-field",
+    "@vaadin/date-picker": "$@vaadin/date-picker",
+    "@vaadin/date-time-picker": "$@vaadin/date-time-picker",
+    "@vaadin/details": "$@vaadin/details",
+    "@vaadin/dialog": "$@vaadin/dialog",
+    "@vaadin/email-field": "$@vaadin/email-field",
+    "@vaadin/field-base": "$@vaadin/field-base",
+    "@vaadin/field-highlighter": "$@vaadin/field-highlighter",
+    "@vaadin/form-layout": "$@vaadin/form-layout",
+    "@vaadin/grid": "$@vaadin/grid",
+    "@vaadin/horizontal-layout": "$@vaadin/horizontal-layout",
+    "@vaadin/icon": "$@vaadin/icon",
+    "@vaadin/icons": "$@vaadin/icons",
+    "@vaadin/input-container": "$@vaadin/input-container",
+    "@vaadin/integer-field": "$@vaadin/integer-field",
+    "@polymer/iron-icon": "$@polymer/iron-icon",
+    "@polymer/iron-iconset-svg": "$@polymer/iron-iconset-svg",
+    "@polymer/iron-list": "$@polymer/iron-list",
+    "@polymer/iron-meta": "$@polymer/iron-meta",
+    "@polymer/iron-resizable-behavior": "$@polymer/iron-resizable-behavior",
+    "@vaadin/item": "$@vaadin/item",
+    "@vaadin/list-box": "$@vaadin/list-box",
+    "@vaadin/lit-renderer": "$@vaadin/lit-renderer",
+    "@vaadin/login": "$@vaadin/login",
+    "@vaadin/menu-bar": "$@vaadin/menu-bar",
+    "@vaadin/message-input": "$@vaadin/message-input",
+    "@vaadin/message-list": "$@vaadin/message-list",
+    "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
+    "@vaadin/notification": "$@vaadin/notification",
+    "@vaadin/number-field": "$@vaadin/number-field",
+    "@vaadin/password-field": "$@vaadin/password-field",
+    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
+    "@vaadin/progress-bar": "$@vaadin/progress-bar",
+    "@vaadin/radio-group": "$@vaadin/radio-group",
+    "@vaadin/scroller": "$@vaadin/scroller",
+    "@vaadin/select": "$@vaadin/select",
+    "@vaadin/split-layout": "$@vaadin/split-layout",
+    "@vaadin/tabs": "$@vaadin/tabs",
+    "@vaadin/tabsheet": "$@vaadin/tabsheet",
+    "@vaadin/text-area": "$@vaadin/text-area",
+    "@vaadin/text-field": "$@vaadin/text-field",
+    "@vaadin/time-picker": "$@vaadin/time-picker",
+    "@vaadin/tooltip": "$@vaadin/tooltip",
+    "@vaadin/upload": "$@vaadin/upload",
+    "@vaadin/vaadin-accordion": "$@vaadin/vaadin-accordion",
+    "@vaadin/vaadin-app-layout": "$@vaadin/vaadin-app-layout",
+    "@vaadin/vaadin-avatar": "$@vaadin/vaadin-avatar",
+    "@vaadin/vaadin-button": "$@vaadin/vaadin-button",
+    "@vaadin/vaadin-checkbox": "$@vaadin/vaadin-checkbox",
+    "@vaadin/vaadin-combo-box": "$@vaadin/vaadin-combo-box",
+    "@vaadin/vaadin-confirm-dialog": "$@vaadin/vaadin-confirm-dialog",
+    "@vaadin/vaadin-context-menu": "$@vaadin/vaadin-context-menu",
+    "@vaadin/vaadin-custom-field": "$@vaadin/vaadin-custom-field",
+    "@vaadin/vaadin-date-picker": "$@vaadin/vaadin-date-picker",
+    "@vaadin/vaadin-date-time-picker": "$@vaadin/vaadin-date-time-picker",
+    "@vaadin/vaadin-details": "$@vaadin/vaadin-details",
+    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
+    "@vaadin/vaadin-dialog": "$@vaadin/vaadin-dialog",
+    "@vaadin/vaadin-form-layout": "$@vaadin/vaadin-form-layout",
+    "@vaadin/vaadin-grid": "$@vaadin/vaadin-grid",
+    "@vaadin/vaadin-icon": "$@vaadin/vaadin-icon",
+    "@vaadin/vaadin-icons": "$@vaadin/vaadin-icons",
+    "@vaadin/vaadin-item": "$@vaadin/vaadin-item",
+    "@vaadin/vaadin-list-box": "$@vaadin/vaadin-list-box",
+    "@vaadin/vaadin-list-mixin": "$@vaadin/vaadin-list-mixin",
+    "@vaadin/vaadin-login": "$@vaadin/vaadin-login",
+    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "@vaadin/vaadin-menu-bar": "$@vaadin/vaadin-menu-bar",
+    "@vaadin/vaadin-messages": "$@vaadin/vaadin-messages",
+    "@vaadin/vaadin-notification": "$@vaadin/vaadin-notification",
+    "@vaadin/vaadin-ordered-layout": "$@vaadin/vaadin-ordered-layout",
+    "@vaadin/vaadin-overlay": "$@vaadin/vaadin-overlay",
+    "@vaadin/vaadin-progress-bar": "$@vaadin/vaadin-progress-bar",
+    "@vaadin/vaadin-radio-button": "$@vaadin/vaadin-radio-button",
+    "@vaadin/router": "$@vaadin/router",
+    "@vaadin/vaadin-select": "$@vaadin/vaadin-select",
+    "@vaadin/vaadin-split-layout": "$@vaadin/vaadin-split-layout",
+    "@vaadin/vaadin-tabs": "$@vaadin/vaadin-tabs",
+    "@vaadin/vaadin-template-renderer": "$@vaadin/vaadin-template-renderer",
+    "@vaadin/vaadin-text-field": "$@vaadin/vaadin-text-field",
+    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
+    "@vaadin/vaadin-time-picker": "$@vaadin/vaadin-time-picker",
+    "@vaadin/vaadin-upload": "$@vaadin/vaadin-upload",
+    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
+    "@vaadin/vaadin-virtual-list": "$@vaadin/vaadin-virtual-list",
+    "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
+    "@vaadin/virtual-list": "$@vaadin/virtual-list",
+    "@polymer/polymer": "$@polymer/polymer",
+    "@vaadin-component-factory/vcf-anchor-nav": "$@vaadin-component-factory/vcf-anchor-nav",
+    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
+    "@vaadin/common-frontend": "$@vaadin/common-frontend",
+    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
+    "date-fns": "$date-fns",
+    "lit": "$lit"
   }
 }
