--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -123,6 +123,14 @@
             <version>5.1.0</version>
             <scope>test</scope>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+					<dependency>
+						<groupId>com.opencsv</groupId>
+						<artifactId>opencsv</artifactId>
+						<version>5.7.1</version>
+					</dependency>
+
     </dependencies>
 
     <build>
