--- a/apmis-flow/package.json
+++ b/apmis-flow/package.json
@@ -108,26 +108,36 @@
     "@vaadin/virtual-list": "23.3.7",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.6.1"
+    "line-awesome": "1.3.0",
+    "lit": "2.6.1",
+    "lumo-css-framework": "^4.0.10"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-replace": "3.1.0",
-    "@rollup/pluginutils": "4.1.0",
     "async": "3.2.2",
+    "chokidar": "^3.5.0",
+    "compression-webpack-plugin": "4.0.1",
+    "css-loader": "5.2.7",
+    "esbuild-loader": "2.19.0",
+    "extra-watch-webpack-plugin": "1.0.3",
+    "extract-loader": "5.1.0",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "6.2.1",
     "glob": "7.2.3",
-    "mkdirp": "1.0.4",
-    "rollup-plugin-brotli": "3.1.0",
+    "html-webpack-plugin": "4.5.1",
+    "lit-css-loader": "0.1.0",
+    "loader-utils": "2.0.4",
     "rollup-plugin-lit-css": "^2.1.0",
     "rollup-plugin-styles": "^3.14.1",
     "strip-css-comments": "5.0.0",
-    "transform-ast": "2.4.4",
     "typescript": "4.9.3",
-    "vite": "3.2.5",
-    "vite-plugin-checker": "0.5.4",
-    "workbox-build": "6.5.4",
+    "webpack": "4.46.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.10.0",
+    "webpack-merge": "4.2.2",
     "workbox-core": "6.5.4",
-    "workbox-precaching": "6.5.4"
+    "workbox-precaching": "6.5.4",
+    "workbox-webpack-plugin": "6.5.0"
   },
   "vaadin": {
     "dependencies": {
@@ -137,6 +147,7 @@
       "@polymer/iron-meta": "3.0.1",
       "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.5.1",
+      "@vaadin-component-factory/vcf-nav": "1.0.6",
       "@vaadin/accordion": "23.3.7",
       "@vaadin/app-layout": "23.3.7",
       "@vaadin/avatar": "23.3.7",
@@ -235,25 +246,35 @@
       "@vaadin/virtual-list": "23.3.7",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.6.1"
+      "line-awesome": "1.3.0",
+      "lit": "2.6.1",
+      "lumo-css-framework": "^4.0.10"
     },
     "devDependencies": {
-      "@rollup/plugin-replace": "3.1.0",
-      "@rollup/pluginutils": "4.1.0",
       "async": "3.2.2",
+      "chokidar": "^3.5.0",
+      "compression-webpack-plugin": "4.0.1",
+      "css-loader": "5.2.7",
+      "esbuild-loader": "2.19.0",
+      "extra-watch-webpack-plugin": "1.0.3",
+      "extract-loader": "5.1.0",
+      "file-loader": "6.2.0",
+      "fork-ts-checker-webpack-plugin": "6.2.1",
       "glob": "7.2.3",
-      "mkdirp": "1.0.4",
-      "rollup-plugin-brotli": "3.1.0",
+      "html-webpack-plugin": "4.5.1",
+      "lit-css-loader": "0.1.0",
+      "loader-utils": "2.0.4",
       "strip-css-comments": "5.0.0",
-      "transform-ast": "2.4.4",
       "typescript": "4.9.3",
-      "vite": "3.2.5",
-      "vite-plugin-checker": "0.5.4",
-      "workbox-build": "6.5.4",
+      "webpack": "4.46.0",
+      "webpack-cli": "4.10.0",
+      "webpack-dev-server": "4.10.0",
+      "webpack-merge": "4.2.2",
       "workbox-core": "6.5.4",
-      "workbox-precaching": "6.5.4"
+      "workbox-precaching": "6.5.4",
+      "workbox-webpack-plugin": "6.5.0"
     },
-    "hash": "207f924de298f5c8b87706abe05d1b1a03631b61fe6271a1f2cd9804eb09842c"
+    "hash": "cc47a12b8ab26b7eeb9d6ddfc2538bd5e2df6e743b94dd507666a924edfc8ca0"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -362,6 +383,9 @@
     "@vaadin/common-frontend": "$@vaadin/common-frontend",
     "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
     "date-fns": "$date-fns",
-    "lit": "$lit"
+    "line-awesome": "$line-awesome",
+    "lit": "$lit",
+    "lumo-css-framework": "$lumo-css-framework",
+    "chokidar": "$chokidar"
   }
 }
