--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -272,6 +272,7 @@ entityExposure = Exposure
 entityCampaignData = Campaign Data
 entityCampaignDataForm=form name
 entityCampaignDataFormPhase= campaign phase
+entityCampaignDataForm = Form Deadline (Days)
 entityStatistics = Statistics
 entityAreas = Regions
 entityCountries = Countries
