--- a/sormas-api/src/main/resources/strings_fa-AF.properties
+++ b/sormas-api/src/main/resources/strings_fa-AF.properties
@@ -270,6 +270,7 @@ entityExposure = Exposure
 entityCampaignData = Campaign Data
 entityCampaignDataForm=form name
 entityCampaignDataFormPhase= campaign phase
+entityCampaignDataForm = \u0645\u0647\u0644\u062A \u0641\u0631\u0645 (\u0631\u0648\u0632\u0647\u0627)
 entityStatistics = Statistics
 entityAreas = Areas
 entityCountries = Countries
