--- a/sormas-api/src/main/resources/strings_ps-AF.properties
+++ b/sormas-api/src/main/resources/strings_ps-AF.properties
@@ -269,6 +269,7 @@ entityUser = User
 entityExposure = Exposure
 entityCampaignData = Campaign Data
 entityCampaignDataForm=form name
+entityCampaignDataForm = \u062F \u0641\u0648\u0631\u0645\u06D0 \u0648\u0631\u0648\u0633\u062A\u06CD \u0646\u06CC\u067C\u0647 (\u0648\u0631\u0681\u06D0)
 entityCampaignDataFormPhase= campaign phase
 entityStatistics = Statistics
 entityAreas = Areas
