--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -8,6 +8,7 @@
 	<version>1.0.30</version>
 	<packaging>war</packaging>
 
+
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
@@ -38,6 +39,10 @@
 			</snapshots>
 		</repository>
 		<!-- Repository used by many Vaadin add-ons -->
+		<repository>
+			<id>vaadin-addons</id>
+			<url>https://maven.vaadin.com/vaadin-addons</url>
+		</repository>
 		<repository>
 			<id>Vaadin Directory</id>
 			<url>https://maven.vaadin.com/vaadin-addons</url>
@@ -82,11 +87,35 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>6.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-web-api</artifactId>
+			<version>8.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>de.symeda.sormas</groupId>
 			<artifactId>sormas-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.vaadin.addons.flowingcode</groupId>
+			<artifactId>grid-exporter-addon</artifactId>
+			<version>1.4.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.vaadin</groupId>
@@ -120,6 +149,12 @@
 			<version>5.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>6.0.9</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.vaadin.highcharts/highcharts 
 			<dependency>
 				<groupId>org.vaadin.highcharts</groupId>
@@ -134,6 +169,36 @@
 			<artifactId>webdrivermanager</artifactId>
 			<version>5.1.0</version>
 			<scope>test</scope>
+		</dependency>
+
+
+		<!-- OpenID -->
+		<dependency>
+			<groupId>fish.payara.api</groupId>
+			<artifactId>payara-api</artifactId>
+			<version>5.201</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>fish.payara.security.connectors</groupId>
+			<artifactId>security-connector-oidc-client</artifactId>
+			<version>2.3.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.microprofile.config</groupId>
+			<artifactId>microprofile-config-api</artifactId>
+			<version>3.0.3</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.glassfish.soteria/javax.security.enterprise -->
+		<dependency>
+			<groupId>org.glassfish.soteria</groupId>
+			<artifactId>javax.security.enterprise</artifactId>
+			<version>1.0</version>
 		</dependency>
 
 
