--- a/apmis-flow/src/main/resources/MockDataWords.properties
+++ b/apmis-flow/src/main/resources/MockDataWords.properties
@@ -47,7 +47,7 @@ login_info=Login Information
 login_hint=Hint: same as username
 login_error_title=Incorrect username or password
 login_error_msg=Check that you have entered the correct username and password and try again.
-login_info_text=Log in as "admin" to have full access. Log in with any other username to have read-only access. For all users, the password is same as the username.
+#login_info_text=Log in as "admin" to have full access. Log in with any other username to have read-only access. For all users, the password is same as the username.
 username=Username
 password=Password
 login=Log in
