--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -200,6 +200,12 @@
 			<artifactId>javax.security.enterprise</artifactId>
 			<version>1.0</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.8.9</version> 
+		</dependency>
 
 
 	</dependencies>
