--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -206,6 +206,17 @@
     		<artifactId>gson</artifactId>
     		<version>2.8.9</version> 
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.google.apis</groupId>
+    		<artifactId>google-api-services-sheets</artifactId>
+    		<version>v4-rev581-1.25.0</version>
+		</dependency>
+		<dependency>
+ 		   <groupId>com.google.api-client</groupId>
+ 		   <artifactId>google-api-client-gson</artifactId>
+ 		   <version>1.31.5</version>
+		</dependency>
 
 
 	</dependencies>
