- updating ui features in about, support, configuration units and pivot #202

--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -224,6 +224,13 @@
 		   <artifactId>togglebutton</artifactId>
 		   <version>3.0.0</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.vaadin.addons</groupId>
+    <artifactId>vaadin-excel-exporter</artifactId>
+    <version>1.0.3</version>
+</dependency>
+		
 
 	</dependencies>
 
