--- a/apmis-flow/package.json
+++ b/apmis-flow/package.json
@@ -389,7 +389,6 @@
     "line-awesome": "$line-awesome",
     "lit": "$lit",
     "lumo-css-framework": "$lumo-css-framework",
-    "chokidar": "$chokidar",
-    "@flowingcode/font-awesome-iron-iconset": "$@flowingcode/font-awesome-iron-iconset"
+    "chokidar": "$chokidar"
   }
 }
