--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -224,13 +224,17 @@
 		   <artifactId>togglebutton</artifactId>
 		   <version>3.0.0</version>
 		</dependency>
-		
 		<dependency>
-    <groupId>org.vaadin.addons</groupId>
-    <artifactId>vaadin-excel-exporter</artifactId>
-    <version>1.0.3</version>
-</dependency>
-		
+			<groupId>org.vaadin.addons</groupId>
+			<artifactId>vaadin-excel-exporter</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.vaadin.crudui</groupId>
+			<artifactId>crudui</artifactId>
+			<version>7.1.0</version>
+		</dependency>
+
 
 	</dependencies>
 
