--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -1112,6 +1112,7 @@ messageSystemFollowUpCanceled = [System] Follow-up automatically canceled becaus
 messageSystemFollowUpCanceledByDropping = [System] Follow-up automatically canceled because contact was dropped
 messageSetContactRegionAndDistrict = Please choose a responsible province and responsible district and save the contact before removing the source case.
 messageAllCampaignFormsValid = All campaign forms have been successfully validated
+messageAllCampaignFormsNotValid = All campaign forms have NOT been successfully validated
 messageEnterSms = Please enter your SMS message here\:
 messageSelectedPeriodTooLong = You have selected a time period that exceeds the maximum number of days. Please make sure that the selected time period does not exceed %d days.
 messagePersonAlreadyEventParticipant = The case person already is an event participant in the selected event. This case has been linked to the selected event.
