--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -193,55 +193,59 @@
 			<version>3.0.3</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.glassfish.soteria/javax.security.enterprise -->
 		<dependency>
 			<groupId>org.glassfish.soteria</groupId>
 			<artifactId>javax.security.enterprise</artifactId>
 			<version>1.0</version>
 		</dependency>
-		
+
 		<dependency>
-    		<groupId>com.google.code.gson</groupId>
-    		<artifactId>gson</artifactId>
-    		<version>2.8.9</version> 
-		</dependency>
-		
-		<dependency>
-    		<groupId>com.google.apis</groupId>
-    		<artifactId>google-api-services-sheets</artifactId>
-    		<version>v4-rev581-1.25.0</version>
-		</dependency>
-		
-		<dependency>
- 		   <groupId>com.google.api-client</groupId>
- 		   <artifactId>google-api-client-gson</artifactId>
- 		   <version>1.31.5</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
 		</dependency>
 
 		<dependency>
-		   <groupId>com.vaadin.componentfactory</groupId>
-		   <artifactId>togglebutton</artifactId>
-		   <version>3.0.0</version>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-sheets</artifactId>
+			<version>v4-rev581-1.25.0</version>
 		</dependency>
-		<dependency>
-    <groupId>org.vaadin.addons</groupId>
-    <artifactId>vaadin-excel-exporter</artifactId>
-    <version>1.0.3</version>
-    
-    
-  </dependency>
-		<dependency>
-    <groupId>org.vaadin.olli</groupId>
-    <artifactId>file-download-wrapper</artifactId>
-    <version>7.0.0</version>
-  </dependency> 
 
-	<dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client-gson</artifactId>
+			<version>1.31.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.vaadin.componentfactory</groupId>
+			<artifactId>togglebutton</artifactId>
+			<version>3.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.vaadin.addons</groupId>
+			<artifactId>vaadin-excel-exporter</artifactId>
+			<version>1.0.3</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.vaadin.olli</groupId>
+			<artifactId>file-download-wrapper</artifactId>
+			<version>7.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.vaadin.crudui</groupId>
 			<artifactId>crudui</artifactId>
 			<version>7.1.0</version>
-	</dependency>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
