- preparing update and imoplementing new features #202

--- a/sormas-api/src/main/resources/strings.properties
+++ b/sormas-api/src/main/resources/strings.properties
@@ -223,7 +223,7 @@ confirmationDisableUsers = Are you sure you want to disable all %d selected user
 confirmationRevokeSormasToSormasShareRequest = Are you sure you want to revoke the share request?
 confirmationSinceLabMessages = This is the first time lab messages will be fetched. Do you want to select the start date from which to fetch lab messages? If you select no, all lab messages will be retrieved.
 confirmationSeeAllPersons=Are you sure you want to search persons for all association types? This could result in a slow response.
-
+confirmationDeleteFormData = Are you sure you want to delete %d selected Campaign Data?
 # Entities
 entityAction=Action
 entityActions=Actions
@@ -530,6 +530,7 @@ headingNoTasksSelected = No tasks selected
 headingNoTreatmentsSelected = No treatments selected
 headingNoVisitsSelected = No visits selected
 headingNoUsersSelected = No users selected
+headingNodataSelected = No data selected
 headingOutbreakDistricts=Outbreak Districts
 headingOutbreakIn = Outbreak in
 headingPathogenTestsDeleted = Pathogen tests deleted
@@ -656,6 +657,7 @@ headingDeleteVaccinations = Remove immunization vaccinations
 
 headingDocumentCreated = Document created
 headingUsersEnabled = Users enabled
+headingDeleteFormDataHeading =  Confirm Campaign Data Deletion
 headingUsersDisabled = Users disabled
 
 headingConfirmUnclearLabMessage=Confirm unclear
@@ -979,6 +981,7 @@ messageNoTasksSelected = You have not selected any tasks
 messageNoTreatmentsSelected = You have not selected any treatments
 messageNoVisitsSelected = You have not selected any visits
 messageNoUsersSelected = You have not selected any users
+messageNodataSelected = You have not selected any data
 messageOutbreakSaved = Outbreak information saved
 messagePasswordReset = User's password was reset
 messagePasswordResetEmailLink = A link to reset the password was sent to the user's email
@@ -1119,6 +1122,7 @@ messageLabMessagesDeleted = All selected lab messages have been deleted
 messageQuarantineOrderDocumentCreated = Quarantine order document has been created
 messageUnavailableTaskEditionDueToDifferentDistricts = Task edition is not available if they are related to different districts 
 messageUsersEnabled = All selected users have been enabled
+messageDataDeleted = All selected Campaign Data have been deleted
 messageUsersDisabled = All selected users have been disabled
 messageDontShareWithReportingToolWarning = This case is actively prevented from being sent to the external reporting tool
 messageBulkCasesWithDifferentDiseasesSelected = You have selected cases with different diseases. Some bulk edit options might be unavailable.
