- Configuring Filters Responsiveness #202

--- a/sormas-api/src/main/resources/strings.properties
+++ b/sormas-api/src/main/resources/strings.properties
@@ -657,7 +657,7 @@ headingDeleteVaccinations = Remove immunization vaccinations
 
 headingDocumentCreated = Document created
 headingUsersEnabled = Users enabled
-headingDeleteFormDataHeading =  Confirm Campaign Data Deletion
+headingDeleteFormDataHeading =  Confirm Data Deletion
 headingUsersDisabled = Users disabled
 
 headingConfirmUnclearLabMessage=Confirm unclear
