--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -41,6 +41,7 @@ from=From
 info=Info
 lastName=Last name
 menu=Menu
+formAccess=Form Access
 moreActions=More
 name=Name
 options=Options
@@ -2367,7 +2368,7 @@ User.userName=User name
 User.userRoles=User roles
 User.address=Address
 User.uuid=UUID
-User.commomUser=Common User?
+User.commonUser=Common User?
 
 # Vaccination
 Vaccination=Vaccination
