--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -45,6 +45,7 @@ moreActions=اجرآت اضافی
 name=نام 
 options=اختیارات 
 continent=Continent
+formAccess=\u062F\u0633\u062A\u0631\u0633\u06CC \u0628\u0647 \u0641\u0631\u0645
 subcontinent=Subcontinent
 country=Country
 region=حوزه 
@@ -2358,7 +2359,7 @@ User.userName=نام شخص استعمال کننده
 User.userRoles=رول شخص استعمال کننده 
 User.address=ادرس 
 User.uuid=UUID
-User.commomUser=Common User?
+User.commonUser=\u06A9\u0627\u0631\u0628\u0631 \u0645\u0634\u062A\u0631\u06A9\u061F
 
 # Vaccination
 Vaccination=Vaccination
