Campaign data i18n complete #202

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -22,7 +22,19 @@ city=City
 postcode=Postcode
 address=Address
 community=Cluster
+clusterNumber=Cluster Number
+formPhase=Form Phase
 communityName=Cluster
+campaignYear=Campaign Year
+showFilters=Show Filters
+hideFilters=Hide Filters
+rows = Numbers of Rows : 
+resetFilters=Reset Filters
+applyFilters=Apply Filters
+dataEntry=Data Entry
+dataImport=Data Import
+importance=Importance
+campaignDataInformation=Campaign Data information
 date=Date
 description=Description
 disease=Disease
