--- a/sormas-api/src/main/resources/descriptions_en-AF.properties
+++ b/sormas-api/src/main/resources/descriptions_en-AF.properties
@@ -22,6 +22,10 @@
 Campaign.campaignPhase = The system currently supports intra-campaign data only
 Campaign.calculatedBasedOn=Calculated based on
 
+campaign.dataEntry=Drop down of list of available forms. Note: closed forms and expire form will not appear here
+campaign.dataImport=Drop down of list of available forms to be imported.
+campaign.importance=Select Form first
+
 # CaseData
 CaseData.caseClassification = Select the case status for the person
 CaseData.clinicianDetails = Please specify the name, phone number and email address of the clinician responsible for this case
