--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -18,11 +18,23 @@
 # General Captions
 all=همه 
 area=\u0645\u0646\u0637\u0642\u0647
+rows =\u062A\u0639\u062F\u0627\u062F \u0631\u062F\u06CC\u0641 : 
 city=شهر 
 postcode=پوست کود 
+clusterNumber=\u0634\u0645\u0627\u0631\u0647 \u06A9\u0644\u0633\u062A\u0631
+formPhase=\u0645\u0631\u062D\u0644\u0647 \u0641\u0631\u0645
 address=ادرس
 community=جامعه 
 communityName=نام جامعه 
+campaignYear=\u0633\u0627\u0644 \u06A9\u0645\u067E\u06CC\u0646
+showFilters=\u0646\u0645\u0627\u06CC\u0634 \u0641\u06CC\u0644\u062A\u0631\u0647\u0627
+hideFilters=\u0646\u0647\u0641\u062A\u0646 \u0641\u06CC\u0644\u062A\u0631\u0647\u0627
+resetFilters=\u0628\u0627\u0632\u0646\u0634\u0627\u0646\u06CC \u0641\u06CC\u0644\u062A\u0631\u0647\u0627
+applyFilters=\u0627\u0639\u0645\u0627\u0644 \u0641\u06CC\u0644\u062A\u0631\u0647\u0627
+dataEntry=\u0648\u0631\u0648\u062F \u062F\u0627\u062F\u0647 \u0647\u0627
+dataImport=Data Import
+importance=\u0627\u0647\u0645\u06CC\u062A
+campaignDataInformation=\u0627\u0637\u0644\u0627\u0639\u0627\u062A \u062F\u0627\u062F\u0647 \u06A9\u0645\u067E\u06CC\u0646
 date=تاریخ
 description=توضیح 
 disease=مرض
