--- a/sormas-api/src/main/resources/strings_fa-AF.properties
+++ b/sormas-api/src/main/resources/strings_fa-AF.properties
@@ -21,6 +21,7 @@
 
 # General Strings
 active = Active
+dataSavedSuccessfully=\u062F\u0627\u062F\u0647 \u0647\u0627 \u0628\u0627 \u0645\u0648\u0641\u0642\u06CC\u062A \u0630\u062E\u06CC\u0631\u0647 \u0634\u062F
 address = \u0646\u0634\u0627\u0646\u06CC
 and = and
 at = at
