--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -21,6 +21,7 @@ area=Region
 city=City
 postcode=Postcode
 address=Address
+
 community=Cluster
 clusterNumber=Cluster Number
 formPhase=Form Phase
@@ -35,6 +36,34 @@ dataEntry=Data Entry
 dataImport=Data Import
 importance=Importance
 campaignDataInformation=Campaign Data information
+archive=Archive
+saveAndContinue=Save & Continue
+chart=Chart
+downloadImportTemplate=Download Import Template
+startDataImport=Start Data Import
+downloadErrorReport=Download Error Report
+importCampaignForm=Import Campaign Form Data
+importCampaignFormData=Import Campaign Form Data
+campaignStatus=Campaign Status
+addNewForm=Add New Forms
+campaignBasics=Campaign Basics
+uuid=UUID
+preCampaignForms=Pre Campaign Forms
+preCampaignDashboard=Pre Campaign Dashboard
+preCampaignPhase=Pre-Campaign Phase
+intraCampaignForms=Intra Campaign Forms
+intraCampaignDashboard=Intra Campaign Dashboard
+intraCampaignPhase=Intra-Campaign Phase
+postCampaignForms=Post Campaign Forms
+postCampaignDashboard=Post Campaign Dashboard
+postCampaignPhase=Post-Campaign Phase
+associateCampaign=Associate Campaign
+round=Round
+
+
+
+
+
 date=Date
 description=Description
 disease=Disease
