--- a/sormas-api/src/main/resources/descriptions_en-AF.properties
+++ b/sormas-api/src/main/resources/descriptions_en-AF.properties
@@ -25,6 +25,7 @@ Campaign.calculatedBasedOn=Calculated based on
 campaign.dataEntry=Drop down of list of available forms. Note: closed forms and expire form will not appear here
 campaign.dataImport=Drop down of list of available forms to be imported.
 campaign.importance=Select Form first
+saveCampaignValidation=Are you sure you want to save the data?
 
 # CaseData
 CaseData.caseClassification = Select the case status for the person
