--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -21,6 +21,7 @@ area=\u0645\u0646\u0637\u0642\u0647
 rows =\u062A\u0639\u062F\u0627\u062F \u0631\u062F\u06CC\u0641 : 
 city=شهر 
 postcode=پوست کود 
+
 clusterNumber=\u0634\u0645\u0627\u0631\u0647 \u06A9\u0644\u0633\u062A\u0631
 formPhase=\u0645\u0631\u062D\u0644\u0647 \u0641\u0631\u0645
 address=ادرس
@@ -35,6 +36,30 @@ dataEntry=\u0648\u0631\u0648\u062F \u062F\u0627\u062F\u0647 \u0647\u0627
 dataImport=Data Import
 importance=\u0627\u0647\u0645\u06CC\u062A
 campaignDataInformation=\u0627\u0637\u0644\u0627\u0639\u0627\u062A \u062F\u0627\u062F\u0647 \u06A9\u0645\u067E\u06CC\u0646
+archive=Archive
+saveAndContinue=Save & Continue
+chart=Chart
+downloadImportTemplate=Download Import Template
+startDataImport=Start Data Import
+downloadErrorReport=Download Error Report
+importCampaignForm=Import Campaign Form Data
+campaignStatus=Campaign Status
+addNewForm=Add New Forms
+campaignBasics=Campaign Basics
+uuid=UUID
+preCampaignForms=Pre Campaign Forms
+preCampaignDashboard=Pre Campaign Dashboard
+preCampaignPhase=Pre-Campaign Phase
+intraCampaignForms=Intra Campaign Forms
+intraCampaignDashboard=Intra Campaign Dashboard
+intraCampaignPhase=Intra-Campaign Phase
+postCampaignForms=Post Campaign Forms
+postCampaignDashboard=Post Campaign Dashboard
+postCampaignPhase=Post-Campaign Phase
+associateCampaign=Associate Campaign
+round=Round
+
+
 date=تاریخ
 description=توضیح 
 disease=مرض
