--- a/sormas-api/src/main/resources/descriptions_fa-AF.properties
+++ b/sormas-api/src/main/resources/descriptions_fa-AF.properties
@@ -25,6 +25,7 @@ Campaign.calculatedBasedOn=Calculated based on
 campaign.dataEntry=\u0644\u06CC\u0633\u062A \u0641\u0631\u0645 \u0647\u0627\u06CC \u0645\u0648\u062C\u0648\u062F. \u062A\u0648\u062C\u0647: \u0641\u0631\u0645 \u0647\u0627\u06CC \u0628\u0633\u062A\u0647 \u0648 \u0641\u0631\u0645 \u0645\u0646\u0642\u0636\u06CC \u062F\u0631 \u0627\u06CC\u0646\u062C\u0627 \u0638\u0627\u0647\u0631 \u0646\u0645\u06CC \u0634\u0648\u0646\u062F
 campaign.dataImport=Drop down of list of available forms to be imported.
 campaign.importance=\u0627\u0628\u062A\u062F\u0627 \u0641\u0631\u0645 \u0631\u0627 \u0627\u0646\u062A\u062E\u0627\u0628 \u06A9\u0646\u06CC\u062F
+saveCampaignValidation=Are you sure you want to save the data?
 
 # CaseData
 CaseData.caseClassification = Select the case status for the person
