--- a/sormas-api/src/main/resources/descriptions_ps-AF.properties
+++ b/sormas-api/src/main/resources/descriptions_ps-AF.properties
@@ -25,6 +25,7 @@ Campaign.calculatedBasedOn=Calculated based on
 campaign.dataEntry=\u062F \u0634\u062A\u0647 \u0641\u0648\u0631\u0645\u0648 \u0644\u06CC\u0633\u062A. \u06CC\u0627\u062F\u0648\u0646\u0647: \u062A\u0693\u0644 \u0634\u0648\u064A \u0641\u0648\u0631\u0645\u06D0 \u0627\u0648 \u062E\u062A\u0645 \u0634\u0648\u064A \u0641\u0648\u0631\u0645\u06D0 \u062F\u0644\u062A\u0647 \u0646\u0647 \u069A\u06A9\u0627\u0631\u064A
 campaign.dataImport=Drop down of list of available forms to be imported.
 campaign.importance=\u0644\u0648\u0645\u0693\u06CC \u0641\u0648\u0631\u0645\u0647 \u063A\u0648\u0631\u0647 \u06A9\u0693\u0626
+saveCampaignValidation=Are you sure you want to save the data?
 
 # CaseData
 CaseData.caseClassification = Select the case status for the person
