i18n further added to apmis

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -59,8 +59,17 @@ postCampaignDashboard=Post Campaign Dashboard
 postCampaignPhase=Post-Campaign Phase
 associateCampaign=Associate Campaign
 round=Round
-
-
+formname=Form Name
+expiry=Expiry
+removeThisForm=Remove this form
+daysTOExpiry=Days to Expiry
+update=Update
+createNewCampaign=Create New Campaign
+personalInformation=Personal Information
+phoneNumber=Phone number
+changePassword=Change Password
+mobileUserGuide=Mobile User Guide
+exportFormGlossary=Export Forms & Diagrams Glossary
 
 
 
