--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -36,7 +36,6 @@ dataEntry=\u0648\u0631\u0648\u062F \u062F\u0627\u062F\u0647 \u0647\u0627
 dataImport=Data Import
 importance=\u0627\u0647\u0645\u06CC\u062A
 campaignDataInformation=\u0627\u0637\u0644\u0627\u0639\u0627\u062A \u062F\u0627\u062F\u0647 \u06A9\u0645\u067E\u06CC\u0646
-archive=Archive
 saveAndContinue=Save & Continue
 chart=Chart
 downloadImportTemplate=Download Import Template
@@ -58,6 +57,21 @@ postCampaignDashboard=Post Campaign Dashboard
 postCampaignPhase=Post-Campaign Phase
 associateCampaign=Associate Campaign
 round=Round
+formname=Form Name
+expiry=Expiry
+removeThisForm=Remove this form
+daysTOExpiry=Days to Expiry
+update=Update
+createNewCampaign=Create New Campaign
+personalInformation=Personal Information
+phoneNumber=Phone number
+changePassword=Change Password
+mobileUserGuide=Mobile User Guide
+exportFormGlossary=Export Forms & Diagrams Glossary
+
+
+
+
 
 
 date=تاریخ
