--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -44,6 +44,28 @@ campaignRoundrequired=Campaign Round is Required
 campaignDescriptionRequired=Campaign Description is Required
 contentGoeshere=Content Goes Here
 errorCampaignForm=error in campaign form
+max60DaysFromStartDate=Max 60 days from Campaign Start Date
+pleaseSelectFormFirst=Please select a form first 
+wasRemovedFromCampaign=was removed from the Campaign
+newFormAddedSucces=New Form Added Successfully
+campaignUpdated=Campaign Updated
+pleaseSelectaFormBeforeUpdate=Please select a form before you update
+emailAddressRequired=Email Address is Required
+passwordAccessibility=Password & Accesibility
+languageRequired=Language is Required
+languageSetingSavedSuccess=Language setting saved successfully
+choosePreferredLanguage=Choose prefered language:
+confirmPassword=Confirm Password
+choosePassword=Choose a new password for your account
+mustBeAt8Char=*Must be at least 8 characters
+mustContain1UppercaseChar=*Must contain 1 Uppercase and 1 special character
+apmisJsonGlossary=APMIS Json Glossary
+areSureYouWantToLogout=Are you sure you want to logout?
+
+
+  
+
+
 
 
 address = Address
