--- a/sormas-api/src/main/resources/descriptions_fa-AF.properties
+++ b/sormas-api/src/main/resources/descriptions_fa-AF.properties
@@ -26,6 +26,8 @@ campaign.dataEntry=\u0644\u06CC\u0633\u062A \u0641\u0631\u0645 \u0647\u0627\u06C
 campaign.dataImport=Drop down of list of available forms to be imported.
 campaign.importance=\u0627\u0628\u062A\u062F\u0627 \u0641\u0631\u0645 \u0631\u0627 \u0627\u0646\u062A\u062E\u0627\u0628 \u06A9\u0646\u06CC\u062F
 saveCampaignValidation=Are you sure you want to save the data?
+about.description=The Afghanistan Polio Management Information System (APMIS) is an online data system that simplifies and improves the use and management of polio immunization-related data. APMIS facilitates field data entry, immunization data storage, data visualization, and real-time monitoring of polio immunization activities in Afghanistan.  Using this system will assist in evaluating immunization campaign activities and identifying program challenges.
+
 
 # CaseData
 CaseData.caseClassification = Select the case status for the person
