--- a/sormas-api/src/main/resources/descriptions_ps-AF.properties
+++ b/sormas-api/src/main/resources/descriptions_ps-AF.properties
@@ -26,6 +26,8 @@ campaign.dataEntry=\u062F \u0634\u062A\u0647 \u0641\u0648\u0631\u0645\u0648 \u06
 campaign.dataImport=Drop down of list of available forms to be imported.
 campaign.importance=\u0644\u0648\u0645\u0693\u06CC \u0641\u0648\u0631\u0645\u0647 \u063A\u0648\u0631\u0647 \u06A9\u0693\u0626
 saveCampaignValidation=Are you sure you want to save the data?
+about.description=The Afghanistan Polio Management Information System (APMIS) is an online data system that simplifies and improves the use and management of polio immunization-related data. APMIS facilitates field data entry, immunization data storage, data visualization, and real-time monitoring of polio immunization activities in Afghanistan.  Using this system will assist in evaluating immunization campaign activities and identifying program challenges.
+
 
 # CaseData
 CaseData.caseClassification = Select the case status for the person
