--- a/sormas-api/src/main/resources/strings_ps-AF.properties
+++ b/sormas-api/src/main/resources/strings_ps-AF.properties
@@ -51,7 +51,7 @@ newFormAddedSucces=New Form Added Successfully
 campaignUpdated=Campaign Updated
 pleaseSelectaFormBeforeUpdate=Please select a form before you update
 emailAddressRequired=Email Address is Required
-passwordAccessibility=Password & Accesibility
+passwordAccessibility=Password & Accessibility
 languageRequired=Language is Required
 languageSetingSavedSuccess=Language setting saved successfully
 choosePreferredLanguage=Choose prefered language:
