i18n localization of the apmis is 80% complete #202

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -29,14 +29,15 @@ communityName=Cluster
 campaignYear=Campaign Year
 showFilters=Show Filters
 hideFilters=Hide Filters
-rows = Numbers of Rows : 
+rows=Rows : 
 resetFilters=Reset Filters
 applyFilters=Apply Filters
 dataEntry=Data Entry
 dataImport=Data Import
 importance=Importance
 campaignDataInformation=Campaign Data information
-archive=Archive
+
+
 saveAndContinue=Save & Continue
 chart=Chart
 downloadImportTemplate=Download Import Template
@@ -70,6 +71,46 @@ phoneNumber=Phone number
 changePassword=Change Password
 mobileUserGuide=Mobile User Guide
 exportFormGlossary=Export Forms & Diagrams Glossary
+relevanceStatus=Relevance Status
+addNewCluster=Add New Cluster
+errorArchiving=Error Archiving
+notValidValue=Not Valid Value: 
+dearchiveCluster=De-Archive Cluster
+archiveCluster=Archive Cluster
+archiveSelectedCluster=Archive Selected Clusters
+dearchiveSelectedClusters=De-Archive Selected Clusters
+risk=Risk
+addNewDistrict=Add New District
+archiveSelectedDistricts=Archive Selected Districts
+dearchiveSelectedDistricts=De-Archive Selected Districts
+dearchiveDistrict=De-Archive District
+archiveDistrict=Archive District
+addNewProvince=Add New Province
+dearchiveProvince=De-Archive Province
+archiveProvince=Archive Province
+createNewRegion=Create New Region
+clearSearch=Clear Search
+addNewRegion=Add New Region
+archiveSelectedRegions=Archive Selected Regions
+dearchivedSelectedRegions=De-Archive Selected Regions
+dearchiveRegion=De-Archive Region
+archiveRegion=Archive Region
+formCount=Form Count
+selectFormFirst=Select Form first
+icmHouseholdMonitoring=ICM Household Monitoring
+icmRevisits=ICM Revisits
+icmSupervisorMonitoring=ICM Supervisor Monitoring
+icmTeamMonitoring=ICM Team Monitoring
+aggregateReport=Aggregate Report
+dataCompleteness=Data Completeness
+mobileUsers=Mobile Users
+errorStatus=Error Status
+message=Message
+
+
+
+
+
 
 
 
@@ -78,7 +119,7 @@ description=Description
 disease=Disease
 district=District
 districtName=District
-edit=Edit
+edit=Edit 
 epiWeekFrom=From Epi Week
 epiWeekTo=To Epi Week
 facilityType=Facility type
