--- a/sormas-api/src/main/resources/captions_ps-AF.properties
+++ b/sormas-api/src/main/resources/captions_ps-AF.properties
@@ -36,42 +36,76 @@ dataEntry=\u062F \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u062F\u0627\u
 dataImport=\u062F \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u0648\u0627\u0631\u062F\u0648\u0644
 importance=\u0627\u0647\u0645\u06CC\u062A
 campaignDataInformation=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u0689\u06CC\u067C\u0627 \u0645\u0639\u0644\u0648\u0645\u0627\u062A
+
+
+
 saveAndContinue=Save & Continue
 chart=Chart
-downloadImportTemplate=Download Import Template
-startDataImport=Start Data Import
-downloadErrorReport=Download Error Report
+downloadImportTemplate=\u062F \u0648\u0627\u0631\u062F\u0627\u062A\u0648 \u067C\u06CC\u0645\u067E\u0644\u06CC\u067C \u0641\u0627\u06CC\u0644 \u0689\u0627\u0648\u0646\u0644\u0648\u0689 \u06A9\u0648\u0644
+startDataImport=\u062F \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u0648\u0627\u0631\u062F\u0648\u0644 \u067E\u06CC\u0644
+downloadErrorReport=\u062F \u062E\u0637\u0627 \u0631\u0627\u067E\u0648\u0631 \u0689\u0627\u0648\u0646\u0644\u0648\u0689 \u06A9\u0648\u0644
 importCampaignForm=Import Campaign Form Data
-campaignStatus=Campaign Status
+campaignStatus=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u062D\u0627\u0644\u062A
 addNewForm=Add New Forms
 campaignBasics=Campaign Basics
 uuid=UUID
-preCampaignForms=Pre Campaign Forms
-preCampaignDashboard=Pre Campaign Dashboard
-preCampaignPhase=Pre-Campaign Phase
-intraCampaignForms=Intra Campaign Forms
-intraCampaignDashboard=Intra Campaign Dashboard
+preCampaignForms=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u062F\u0645\u062E\u0647 \u0641\u0648\u0631\u0645\u06D0
+preCampaignDashboard=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u062F\u0645\u062E\u0647 \u0689\u0634\u0628\u0648\u0631\u0689
+preCampaignPhase=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u062F\u0645\u062E\u0647 \u0645\u0631\u062D\u0644\u0647
+intraCampaignForms=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u067E\u0647 \u062C\u0631\u06CC\u0627\u0646 \u06A9\u06D0 \u0641\u0648\u0631\u0645\u06D0
+intraCampaignDashboard=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u067E\u0647 \u062C\u0631\u06CC\u0627\u0646 \u06A9\u06D0 \u0689\u0634\u0628\u0648\u0631\u0689
 intraCampaignPhase=Intra-Campaign Phase
-postCampaignForms=Post Campaign Forms
+postCampaignForms=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u0685\u062E\u0647 \u0648\u0631\u0648\u0633\u062A\u0647 \u0641\u0648\u0631\u0645\u06D0
 postCampaignDashboard=Post Campaign Dashboard
-postCampaignPhase=Post-Campaign Phase
-associateCampaign=Associate Campaign
-round=Round
-formname=Form Name
-expiry=Expiry
-removeThisForm=Remove this form
-daysTOExpiry=Days to Expiry
-update=Update
-createNewCampaign=Create New Campaign
-personalInformation=Personal Information
-phoneNumber=Phone number
-changePassword=Change Password
-mobileUserGuide=Mobile User Guide
-exportFormGlossary=Export Forms & Diagrams Glossary
-
-
-
-
+postCampaignPhase=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u0685\u062E\u0647 \u0648\u0631\u0648\u0633\u062A\u0647 \u0645\u0631\u062D\u0644\u0647
+associateCampaign=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u062D\u0648\u0632\u06D0
+round=\u062F\u0648\u0631\u0647
+formname=\u062F \u0641\u0648\u0631\u0645 \u0646\u0648\u0645
+expiry=\u062E\u062A\u0645\u0648\u0644
+removeThisForm=\u062F\u0627 \u0641\u0648\u0631\u0645\u0647 \u0644\u0631\u06D0 \u06A9\u0648\u0644
+daysTOExpiry=\u062F \u062E\u062A\u0645\u06CC\u062F\u0648 \u0648\u0631\u0681\u06D0
+update=\u062A\u0627\u0632\u0647 \u06A9\u0648\u0644
+createNewCampaign=\u0646\u0648\u06CC \u06A9\u0645\u067E\u0627\u06CC\u0646 \u062C\u0648\u0693 \u06A9\u0648\u0644
+personalInformation=\u0634\u062E\u0635\u064A \u0645\u0639\u0644\u0648\u0645\u0627\u062A
+phoneNumber=\u062F \u062A\u0644\u06CC\u0641\u0648\u0646 \u0634\u0645\u06CC\u0631\u0647
+changePassword=\u067E\u067C\u0646\u0648\u0645 \u0628\u062F\u0644 \u06A9\u0693\u06CC
+mobileUserGuide=\u062F \u0645\u0648\u0628\u0627\u06CC\u0644 \u06A9\u0627\u0631\u0648\u0646\u06A9\u064A \u0644\u0627\u0631\u069A\u0648\u062F
+exportFormGlossary=\u062F \u0641\u0648\u0631\u0645\u0648 \u0627\u0648 \u0689\u06CC\u0627\u06AB\u0631\u0627\u0645\u0648\u0646\u0648 \u0644\u063A\u062A \u0635\u0627\u062F\u0631\u0648\u0644
+relevanceStatus=\u062F \u0627\u0693\u0648\u0646\u062F\u0647 \u062D\u0627\u0644\u062A
+addNewCluster=Add New Cluster
+errorArchiving=Error Archiving
+notValidValue=Not Valid Value: 
+dearchiveCluster=De-Archive Cluster
+archiveCluster=Archive Cluster
+archiveSelectedCluster=Archive Selected Clusters
+dearchiveSelectedClusters=De-Archive Selected Clusters
+risk=\u062E\u0637\u0631
+addNewDistrict=Add New District
+archiveSelectedDistricts=Archive Selected Districts
+dearchiveSelectedDistricts=De-Archive Selected Districts
+dearchiveDistrict=De-Archive District
+archiveDistrict=Archive District
+addNewProvince=Add New Province
+dearchiveProvince=De-Archive Province
+archiveProvince=Archive Province
+createNewRegion=\u0646\u0648\u06D0 \u0633\u06CC\u0645\u0647 \u062C\u0648\u0693\u0648\u0644
+clearSearch=\u0644\u067C\u0648\u0646 \u067E\u0627\u06A9\u0648\u0644
+addNewRegion=\u0646\u0648\u06D0 \u0633\u06CC\u0645\u0647 \u0627\u0636\u0627\u0641\u0647 \u06A9\u0648\u0644
+archiveSelectedRegions=Archive Selected Regions
+dearchivedSelectedRegions=De-Archive Selected Regions
+dearchiveRegion=De-Archive Region
+archiveRegion=Archive Region
+formCount=Form Count
+selectFormFirst=\u0644\u0648\u0645\u0693\u06CC \u0641\u0648\u0631\u0645\u0647 \u063A\u0648\u0631\u0647 \u06A9\u0693\u0626
+icmHouseholdMonitoring=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u067E\u0647 \u062C\u0631\u06CC\u0627\u0646 \u06A9\u06D0 \u062F \u06A9\u0648\u0631\u0646\u06CD \u067E\u0647 \u06A9\u0686\u0647 \u0627\u0631\u0632\u0648\u0646\u0647
+icmRevisits=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u067E\u0647 \u062C\u0631\u06CC\u0627\u0646 \u06A9\u06D0 \u062F \u06A9\u0648\u0631\u0646\u06CD \u067E\u0647 \u06A9\u0686\u0647 \u0628\u06CC\u0627 \u0627\u0632\u0645\u0648\u06CC\u0646\u0647
+icmSupervisorMonitoring=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u067E\u0647 \u062C\u0631\u06CC\u0627\u0646 \u06A9\u06D0 \u062F \u0646\u0638\u0627\u0631\u062A \u06A9\u0648\u0646\u06A9\u064A \u0645\u0639\u0627\u06CC\u0646\u0647
+icmTeamMonitoring=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u067E\u0647 \u062C\u0631\u06CC\u0627\u0646 \u06A9\u06D0 \u062F \u067C\u06CC\u0645 \u0627\u0631\u0632\u0648\u0646\u0647
+aggregateReport=\u067C\u0648\u0644\u06CC\u0632 \u0631\u0627\u067E\u0648\u0631
+dataCompleteness=\u062F \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u0628\u0634\u067E\u0693\u062A\u06CC\u0627
+mobileUsers=\u062F \u0645\u0648\u0628\u0627\u06CC\u0644 \u06A9\u0627\u0631\u0648\u0648\u0646\u06A9\u064A
+errorStatus=Error Status
+message=\u067E\u06CC\u063A\u0627\u0645
 
 
 
